<?xml version="1.0" encoding="utf-8"?>
<!--
    stocks is client-server program to manage a household's food stock
    Copyright (C) 2019  The stocks developers

    This file is part of the stocks program suite.

    stocks is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    stocks is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/.
-->


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
            layout="@layout/text_field_conflict"
            android:id="@+id/fragment_food_form_name"/>

    <include
            layout="@layout/switch_conflict"
            android:id="@+id/fragment_food_form_to_buy"/>

    <include
            layout="@layout/text_field_conflict"
            android:id="@+id/fragment_food_form_expiration_offset"/>

    <include
            layout="@layout/spinner_conflict"
            android:id="@+id/fragment_food_form_location"/>

    <include
            layout="@layout/spinner_conflict"
            android:id="@+id/fragment_food_form_store_unit"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_food_form_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_padding"
            android:hint="@string/hint_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
