...
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <include
                layout="@layout/date_conflict"
                android:id="@+id/fragment_food_item_form_date"/>

        <include
                layout="@layout/spinner_conflict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_food_item_form_date"
                android:id="@+id/fragment_food_item_form_location"/>

        <include
                layout="@layout/spinner_conflict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_food_item_form_location"
                android:id="@+id/fragment_food_item_form_unit"/>

        <com.google.android.material.divider.MaterialDivider
                android:layout_below="@id/fragment_food_item_form_unit"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
...
