...
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <DatePicker
            android:id="@+id/date_conflict_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:layout_centerHorizontal="true"
            android:datePickerMode="spinner"/>

...
